5-redirect/coolcash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coolcash
spec:
  selector:
    matchLabels:
      app: coolcash
  template:
    metadata:
      labels:
        app: coolcash
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/paymentservice:v0.1.3
        ports:
        - containerPort: 50051
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: coolcash
spec:
  type: ClusterIP
  selector:
    app: coolcash
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
