5-redirect/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coolcash-redirect
spec:
  hosts:
  - paymentservice
  http:
  - route:
    - destination:
        host: coolcash
